--- a/scss/base.scss
+++ b/scss/base.scss
@@ -3,7 +3,5 @@
 ––––––––––––––––––––––*/
 
 @import "reset";
-@import "variables";
-@import "type";
-@import "responsive";
-@import "general"
+@import "helpers";
+@import "typography";
