basic grid settings for bourbon neat

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -2,6 +2,9 @@
         $BASE
 ––––––––––––––––––––––*/
 
+@import "bourbon/bourbon";
+@import "grid-settings";
+@import "neat/neat";
 @import "reset";
 @import "helpers";
 @import "typography";
