--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -2,7 +2,7 @@
       $TYPOGRAPHY
 ––––––––––––––––––––––*/
 
-@import "variables";
+@import "helpers";
 
 html {
   font: normal 100%/1.5 sans-serif;
