--- a/scss/base.scss
+++ b/scss/base.scss
@@ -6,5 +6,7 @@
 @import "grid-settings";
 @import "neat/neat";
 @import "reset";
+@import "app";
+@import "container";
 @import "helpers";
 @import "typography";
