modular scale helper classes

--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -2,7 +2,7 @@
       $HELPERS
 ––––––––––––––––––––––*/
 
-// modular scale
+// modular scale – 3:4 perfect fourth, ideal size: 18px
 
 // TODO – come up with better names for variables
 
