--- a/scss/_grid-settings.scss
+++ b/scss/_grid-settings.scss
@@ -1,7 +1,7 @@
 @import "neat/neat-helpers";
 
 $grid-columns: 8;
-$max-width: em(1088);
+$max-width: 82%;
 $visual-grid: false;
 
 $small: new-breakpoint(max-width 350px 2);
