created base app settings sass file

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -2,12 +2,15 @@
       $TYPOGRAPHY
 ––––––––––––––––––––––*/
 
+@import "app-settings";
 @import "helpers";
 
 
 html {
-  font: normal 100%/1.5 sans-serif;
-  // short hand: weight, size, line-height, family
+  font-size: $baseFontSize;
+  font-family: sans-serif;
+  font-weight: normal;
+  line-height: 1.5;
 }
 
 body {
