continuing to add to kitchen sink, working on typography first

--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -8,7 +8,7 @@
   @include outer-container;
 
   background-color: #f8f8f8;
-  padding: 3em 2em;
+  padding: 3em;
   margin-top: 2em;
   margin-bottom: 2em;
   border-bottom: 7px solid #c7c7c7;
