--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -8,8 +8,9 @@
 
 html {
   font-size: $baseFontSize;
-  font-family: sans-serif;
-  font-weight: normal;
+  font-family: 'Gotham A', 'Gotham B';
+  font-weight: 400;
+  font-style: normal;
   line-height: 1.5;
 }
 
@@ -22,6 +23,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
   margin-top: 0;
+  font-weight: 700;
 }
 
 p {
@@ -103,7 +105,10 @@ ul, ol {
 }
 
 
-
+.logo {
+  text-transform: uppercase;
+  ffont-size: $mediumType;
+}
 
 
 
