got a simple grid system set up, needs to be more robust

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -2,12 +2,8 @@
         $BASE
 ––––––––––––––––––––––*/
 
-@import "bourbon/bourbon";
-@import "grid-settings";
-@import "neat/neat";
-@import "reset";
-@import "app-settings";
-@import "app";
-@import "container";
-@import "helpers";
+@import "variables";
+@import "mixins";
 @import "typography";
+@import "base-app";
+@import "grid";
