--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,51 +13,53 @@
 
 // use descriptive names for colors, like: bright-green or dark blue
 
-$color: #5294e8;
+$color:                       #5294e8;
 
 
 /*======================
       $TYPESIZES
 =======================*/
 
-$base-type-size: 100%;
-$base-line-height: 1.5;
+$base-type-size:              100%;
+$base-line-height:            1.5;
 
 // modular scale – 3:4 perfect fourth, ideal size: 18px
 
 // TODO – come up with better names for variables
 
-$petaType: 7.478em;
-$teraType: 5.61em;
-$gigaType: 4.209em;
-$megaType: 3.157em;
-$hugeType: 2.369em;
-$largeType: 1.777em;
-$mediumType: 1.333em;
-$normalType: 1em;  // base font-size
-$smallType: 0.75em;
-$littleType: 0.563em;
-$tinyType: 0.422em;
-$nanoType: 0.317em;
+$petaType:                    7.478em;
+$teraType:                    5.61em;
+$gigaType:                    4.209em;
+$megaType:                    3.157em;
+$hugeType:                    2.369em;
+$largeType:                   1.777em;
+$mediumType:                  1.333em;
+$normalType:                  1em;      // base font-size
+$smallType:                   0.75em;
+$littleType:                  0.563em;
+$tinyType:                    0.422em;
+$nanoType:                    0.317em;
 
 
 /*======================
         $LINKS
 =======================*/
 
-$link-color: $color;
-$link-hover-color: darken($link-color, 20);
+$link-color:                  $color;
+$link-hover-color:            darken($link-color, 20);
 
 
 /*======================
         $LAYOUT
 =======================*/
 
-$layout-max-size: 75em;
+$layout-max-size:             75em;
+$mobile-breakpoint:           25em;
+// the breakpoint at which all columns should collapse
 
 // breakpoints – where design breaks down and a media query is needed
 
-$small-breakpoint: 32em;
-$medium-breakpoint: 40em;
-$medium-large-breakpoint: 50em;
-$large-breakpoint: 65em;
+$small-breakpoint:            32em;
+$medium-breakpoint:           40em;
+$medium-large-breakpoint:     50em;
+$large-breakpoint:            65em;
